--- a/Pages/Admin/LogOut.cshtml
+++ b/Pages/Admin/LogOut.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model LogOutCModel
+@model HotelServices.Pages.Admin.LogOutModel
 @{
     ViewData["Title"] = "Atsijungti";
 }
@@ -10,3 +10,4 @@
     </form>
     <a asp-page="index"><input type="submit" class="btn btn-danger" value="Atšaukti" /></a>
 </div>
+
