--- a/Pages/Shared/_LayoutClient.cshtml
+++ b/Pages/Shared/_LayoutClient.cshtml
@@ -30,7 +30,7 @@
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="LogOut">Atsijungti</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Clients/LogOut">Atsijungti</a>
                         </li>
                     </ul>
                 </div>
