--- a/Pages/Shared/_LayoutRegistrationWorkers.cshtml
+++ b/Pages/Shared/_LayoutRegistrationWorkers.cshtml
@@ -36,7 +36,7 @@
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="LogOut">Atsijungti</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Registration/LogOut">Atsijungti</a>
                         </li>
                     </ul>
                 </div>
