--- a/Pages/Shared/_Layoutadmin.cshtml
+++ b/Pages/Shared/_Layoutadmin.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Admin/workerslist">Darbuotojai</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Admin/LogOut">Atsijungti</a>
+                        </li>
                     </ul>
                 </div>
             </div>
