--- a/Pages/Registration/ChangerRoomState.cshtml
+++ b/Pages/Registration/ChangerRoomState.cshtml
@@ -12,6 +12,8 @@
     <h1 class="display-4">Kambariai</h1>
     <center>
         <table >
+            @if (Model.kambarys != null)
+            {
             <tr>
                 <th style="text-align:right">Kambaryio Nr.:</th>
                 <th></th>
@@ -21,20 +23,21 @@
                 <th style="text-align:left">Kambario Statusas:</th>
                 <th></th>
                 <td>
-                    <select name="states" id="states">
-                        @for (int i = 0; i < Model.statusai.Count; i++)
-                        {
-                        <option value="@Model.statusai[i].Id">@Model.statusai[i].name</option>
-                        }
-                    </select>
+                   
                 </td>
             </tr>
+            }
         </table>
-
         <br />
         <table class="table-striped">
         </table>
-        <form asp-page-handler="button" asp-route-ID="@Model.kambarys.Nr" method="post">
+        <form method="post">
+            <select name="selectas" id="selectas">
+                @for (int i = 0; i < @Model.dropdownlist.Count; i++)
+                {
+                    <option value="@Model.dropdownlist[i].Value">@Model.dropdownlist[i].Text</option>
+                }
+            </select>
             <button class="btn btn-success">Taip</button>
         </form>
         <a asp-area="" asp-page="/Registration/RegRoomsindex"><input type="button" class="btn btn-danger" value="Atšaukti" /></a>
