--- a/Pages/Registration/LogOut.cshtml
+++ b/Pages/Registration/LogOut.cshtml
@@ -5,10 +5,12 @@
 }
 <div class="text-center">
     <h5 class="display-4">Ar tikrai norite atsijungti?</h5>
-    <div class="row">
-        <form method="post">
-            <button type="submit" class="btn btn-success">Taip</button>
-        </form>
-        <a asp-page="index"><input type="submit" class="btn btn-danger" value="Atšaukti" /></a>
-    </div>
+    <center>
+        <div >
+            <form method="post">
+                <button type="submit" class="btn btn-success">Taip</button>
+            </form>
+            <a asp-page="index"><input type="submit" class="btn btn-danger" value="Atšaukti" /></a>
+        </div>
+    </center>
 </div>
