--- a/Pages/Registration/RegBillsindex.cshtml
+++ b/Pages/Registration/RegBillsindex.cshtml
@@ -19,7 +19,7 @@
         {
             <h6 style="color:forestgreen">Sėkmingai apmokėta</h6>
         }
-        <table class="table-striped">
+        <table class="table-striped" style="width:80%; justify-content:center; text-align:center;">
             <thead>
                 <tr>
                     <th>Nr</th>
