--- a/Pages/Registration/RegClientRezervations.cshtml
+++ b/Pages/Registration/RegClientRezervations.cshtml
@@ -14,9 +14,9 @@
 @if (Model.rezervacijos.Count > 0)
 {
     <div class="text-center">
-        <h1 class="display-4">Rezervacijos</h1>
+        <h1 class="display-4">Kliento rezervacijos</h1>
         <center>
-            <table class="table-striped">
+            <table class="table-striped" style="width:80%; justify-content:center; text-align:center;">
                 <thead>
                     <tr>
                         <th>Nr</th>
