--- a/Pages/Registration/RegClientsindex.cshtml
+++ b/Pages/Registration/RegClientsindex.cshtml
@@ -14,7 +14,7 @@
 <div class="text-center">
     <h1 class="display-4">Klientai</h1>
     <center>
-        <table class="table-striped">
+        <table class="table-striped" style="width:80%; justify-content:center; text-align:center;">
             <thead>
                 <tr>
                     <th>Vardas</th>
