--- a/Pages/Registration/ChangerRoomState.cshtml
+++ b/Pages/Registration/ChangerRoomState.cshtml
@@ -11,7 +11,7 @@
 <div class="text-center">
     <h1 class="display-4">Kambariai</h1>
     <center>
-        <table>
+        <table class="table-striped" style="width:80%; justify-content:center; text-align:center;">
             @if (Model.kambarys != null)
             {
                 <tr>
