--- a/Pages/Clients/Reserve.cshtml
+++ b/Pages/Clients/Reserve.cshtml
@@ -15,7 +15,7 @@
             <div class="form-group">
                 <h5>Pasirinkite laiką, kurį norite rezervuoti</h5>
                 <h5 style="color:red">@Model.ERROR</h5>
-                <div class>
+                <div>
                     <div class="col-sm-4">
                         <label for="datefrom">Nuo:</label>
                         <input type="date" name="start" required />
