--- a/Pages/Shared/_LayoutClient.cshtml
+++ b/Pages/Shared/_LayoutClient.cshtml
@@ -25,6 +25,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Clients/Reservations">Rezervacijos</a>
                         </li>
                         <li>
+                            <a class="nav-link" asp-area="" asp-page="/Clients/Services"><b>Papildomų paslaugų užsakymas</b></a>
+                        </li>
+                        <li>
                             <a class="nav-link" style="color: red" asp-area="" asp-page="/Clients/Deleteacc"><b>Paskyros naikinimas</b></a>
                         </li>
                     </ul>
