--- a/Pages/Registration/CallWorker.cshtml
+++ b/Pages/Registration/CallWorker.cshtml
@@ -17,7 +17,7 @@
         <center>
             <div class="form-group">
                 <div class="container">
-                    <form asp-page-handler="button" method="post">
+                    <form method="post">
                         <button class="btn btn-success">Taip</button>
                     </form>
                     <a asp-area="" asp-page="/Registration"><input type="button" class="btn btn-danger" value="Atgal" /></a>
