--- a/Pages/Registration/index.cshtml
+++ b/Pages/Registration/index.cshtml
@@ -10,4 +10,10 @@
 
 <div class="text-center">
     <h1 class="display-4">Registratūros pagrindinis puslapis</h1>
+    @if(Model.msg == 1)
+            {
+                <h6 style="color:forestgreen">
+                    Iškvietimas išsiųstas
+                </h6>
+            }
 </div>
