--- a/Pages/Registration/CallWorker.cshtml
+++ b/Pages/Registration/CallWorker.cshtml
@@ -16,11 +16,11 @@
         <h3>Iškviesti darbuotoją?</h3>
         <center>
             <div class="form-group">
-                <div class="container">
+                <div class="row" style="justify-content:center">
                     <form method="post">
                         <button class="btn btn-success">Taip</button>
                     </form>
-                    <a asp-area="" asp-page="/Registration"><input type="button" class="btn btn-danger" value="Atgal" /></a>
+                    <a asp-area="" asp-page="/Registration/index"><input type="button" class="btn btn-danger" value="Atgal" /></a>
                 </div>
             </div>
         </center>
