--- a/Pages/Workers/RoomList.cshtml
+++ b/Pages/Workers/RoomList.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model WorkListModel
+@model HotelServices.Pages.Workers.RoomListModel
 @{
-    ViewData["Title"] = "Darbai";
+}
 }
 @{
     Layout = "_LayoutWorker";
@@ -12,13 +12,13 @@
 
 
 <div class="text-center">
-    <h1 class="display-4">Neatlikti darbai</h1>
+    <h1 class="display-4">Kambariai</h1>
     <center>
         <table class="table-striped" style="width:80%; justify-content:center; text-align:center;">
             <thead>
                 <tr>
                     <th>Nr.</th>
-                    <th>Darbo apibudinimas</th>
+                    <th>Statusas(0 Neuzimtas 1 uzimtas)</th>
                 </tr>
             </thead>
             <tbody>
@@ -32,14 +32,10 @@
                 @{
                     for (int i = 0; i < Model.work.Count; i++)
                     {
-                                <tr>
-                                    <td>@Model.work[i].Name</td>
-                                    <td>@Model.work[i].</td>
-                                    <td>         
-                    <a asp-page="./Atliktas" asp-route-id="@Model.work[i].id" onclick="return confirm('Ar tikrai uzbaigtas darbas?')" class="btn btn-warning">Pabaigt </a>
-
-                                    </td>
-                                </tr>
+                        <tr>
+                            <td>@Model.work[i].Nr</td>
+                            <td>@Model.work[i].Statusas</td>
+                        </tr>
                     }
                 }
             </tbody>
